# 5eCommander

./: .envrc  .gitignore  Dockerfile  docker-compose.yml  flake.nix  pyproject.toml  run_bot.py
.github/workflows/: ci.yml
docs/: index.html
src/bot/: basic.py  cheats.py  checks.py  event_handler.py  main.py  setup_logging.py  util.py
src/core/: base_types.py  creatures.py  database.py  exceptions.py  regions.py  start_condition.py
src/database/: database.py  postgres.py
src/definitions/: creatures.py  extra_data.py  regions.py  start_condition.py
src/event_resolver/: resolver.py
tests/: test_core.py  test_postgres.py  test_regions.py
