[tool.poetry]
name = "5eCommander"
version = "0.0.1"
description = ""
authors = []
packages = [
  {include = "./src"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
async-timeout = "^4.0.2"
"discord.py" = "^2.3.2"
psycopg = "^3.1.18"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pylint = "^3.0.0"


[tool.poetry.scripts]
start = "bot:run"