[tool.poetry]
name = "5eCommander"
version = "0.0.1"
description = ""
authors = []
packages = [
  {include = "./src"},
]

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
async-timeout = "^4.0.2"
"discord.py" = "^2.3.2"
SQLAlchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^8.1.1"
pylint = "^3.0.0"
testcontainers = "^4.4.0"


[tool.poetry.scripts]
start = "bot:run"