[tool.poetry]
name = "5eCommander"
version = "0.0.1"
description = ""
authors = []
packages = [
  {include = "./src"},
]

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
async-timeout = "^4.0.2"
"discord.py" = "^2.3.2"
psycopg2 = "^2.9.9"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^8.1.1"
pylint = "^3.0.0"
testcontainers = "^4.4.0"
mypy = "^1.4.1"
ruff = "^0.4.3"

[tool.poetry.scripts]
start = "bot:run"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "C", "D", "RUF100"]
ignore = []